--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
-    <title>Document</title>
+    <title>Vite App</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <script type="module" crossorigin src="/assets/index.565d40eb.js"></script>
   </head>
   <body>
-    <h1>Index</h1>
-    <p>
-      Pellentesque dapibus suscipit ligula. Donec posuere augue in quam. Etiam
-      vel tortor sodales tellus ultricies commodo. Suspendisse potenti. Aenean
-      in sem ac leo mollis blandit. Donec neque quam, dignissim in, mollis nec,
-      sagittis eu, wisi. Phasellus lacus. Etiam laoreet quam sed arcu. Phasellus
-      at dui in ligula mollis ultricies. Integer placerat tristique nisl.
-      Praesent augue. Fusce commodo. Vestibulum convallis, lorem a tempus
-      semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus.
-      Nullam libero mauris, consequat quis, varius et, dictum id, arcu. Mauris
-      mollis tincidunt felis. Aliquam feugiat tellus ut neque. Nulla facilisis,
-      risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc
-      justo sit amet elit.
-    </p>
-
-    <script src="js/app.js"></script>
+    <div id="root"></div>
+    
   </body>
 </html>
